infra/jenkins/jenkins.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins

      securityContext:
        fsGroup: 1000

      containers:
        - name: jenkins
          image: jenkins-jobserver:1.0
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080
            - name: agent
              containerPort: 50000

          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home

          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 2Gi

      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: agent
      port: 50000
      targetPort: 50000
  type: ClusterIP
